--- a/css/style.css
+++ b/css/style.css
@@ -39,5 +39,41 @@ border-radius: 5px;
     color: rgb(255, 255, 255);
     text-shadow: 0 0 4px rgba(255, 255, 255, 0.5); 
 }
+
+/* .flip-card:hover .flip-inner {
+  transform: rotateY(180deg);
+} */
+
+.rotate-y-180 {
+    transform: rotateY(180deg);
+}  
  
+.flip-card {
+    perspective: 1000px;
+    
+}
+
+.flip-inner {
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+  
+}
+
+
+.flip-front, .flip-back {
+  backface-visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0; 
+
+}
+
+.flip-back {
+  transform: rotateY(180deg);
+}
+  
+
+
   
