--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /* runas */
 body {
     overflow-x: hidden;
+    /* font-family: "Segoe UI", "Roboto", sans-serif; */
+    font-feature-settings: "kern" 1, "liga" 1;
 }
 
 .perks-row {
@@ -73,7 +75,15 @@ border-radius: 5px;
 .flip-back {
   transform: rotateY(180deg);
 }
-  
 
 
-  
+.carta-borda {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover; /* Cobrir todo o espaço */
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1; /* Garante que fique acima do fundo */
+}
+
