--- a/css/style.css
+++ b/css/style.css
@@ -77,13 +77,13 @@ border-radius: 5px;
 }
 
 
-.carta-borda {
+/* .carta-borda {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-size: cover; /* Cobrir todo o espaço */
+  background-size: cover;  
   background-repeat: no-repeat;
   background-position: center;
-  z-index: 1; /* Garante que fique acima do fundo */
-}
+  z-index: 1;  
+} */
 
