--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,22 @@
-/* runas */
 body {
     overflow-x: hidden;
-    /* font-family: "Segoe UI", "Roboto", sans-serif; */
-    font-feature-settings: "kern" 1, "liga" 1;
+    font-feature-settings: "kern" 1, "liga" 1; 
 }
 
+/* 
 .perks-row {
-display: flex;
-gap: 5px;
-margin-bottom: 10px;
+    display: flex;
+    gap: 5px;
+    margin-bottom: 10px;
 }
 
 .perk-icon {
-width: 32px;
-height: 32px;
-border-radius: 5px;
+    width: 32px;
+    height: 32px;
+    border-radius: 5px;
 }
 
-/* itens */
+
 
 .items-row {
     display: flex;
@@ -33,34 +32,28 @@ border-radius: 5px;
     background-color: #1e1e1e;
     padding: 2px;
 }
+*/
 
 
 
-/* tailwindsss */
+
 .text-blur {
     color: rgb(255, 255, 255);
     text-shadow: 0 0 4px rgba(255, 255, 255, 0.5); 
-}
+} 
 
-/* .flip-card:hover .flip-inner {
-  transform: rotateY(180deg);
-} */
-
-.rotate-y-180 {
-    transform: rotateY(180deg);
-}  
- 
 .flip-card {
-    perspective: 1000px;
-    
+  perspective: 1000px;
 }
 
 .flip-inner {
   transform-style: preserve-3d;
   transition: transform 0.5s;
-  
 }
 
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}  
 
 .flip-front, .flip-back {
   backface-visibility: hidden;
@@ -69,21 +62,23 @@ border-radius: 5px;
   height: 100%;
   top: 0;
   left: 0; 
-
 }
 
 .flip-back {
   transform: rotateY(180deg);
 }
 
+/* .flip-card:hover .flip-inner {
+  transform: rotateY(180deg);
+} */
 
-.carta-borda {
+/* .carta-borda {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-size: cover; /* Cobrir todo o espaço */
+  background-size: cover;  
   background-repeat: no-repeat;
   background-position: center;
-  z-index: 1; /* Garante que fique acima do fundo */
-}
+  z-index: 1;  
+} */
 
